# advent-of-code-solutions

./: .gitignore
2015/: Cargo.toml  day24-reddit.py
2015/day1/: Cargo.toml
2015/day2/: Cargo.toml
2015/day4/: Cargo.toml
2015/day6/: Cargo.toml
2015/day7/: Cargo.toml
2015/day7/src/: wireA.pest
2015/day8/: Cargo.toml
2015/python/day10/: day10a.py
2015/python/day11/: day11.py
2015/python/day12/: day12a.py  day12b.py
2015/python/day13/: day13a.py  day13b.py
2015/python/day14/: day14a.py  day14b.py
2015/python/day15/: day15a.py
2015/python/day22/: astar.current.py  astar.py  astar.stats  dijkstra.py
2015/python/day9/: day9a.py
2015/rust/: Cargo.toml
2015/rust/advent_support/: Cargo.toml
2015/rust/day1/: Cargo.toml
2015/rust/day15/: Cargo.toml
2015/rust/day16/: Cargo.toml
2015/rust/day17/: Cargo.toml
2015/rust/day21/: Cargo.toml  ofile
2015/rust/day22-acdibble/: Cargo.toml
2018/python/: 1.py  1_2.py
2019/10/: asteroids.py  mine  sample  visibly.py
2019/11/: intcode.py
2019/3/: intersection2.py  intersection3.py  ofile  ofile.3.1  ofile.3.2  ofile2  scrap  steps.py  vis.py
2019/6/: orbits.py
2019/7/: amplifier.py  intcode.py  process.py  threading_pipe.py
2019/8/: input.layered  layers.py
2019/9/: input.1.result.expected  input.relative  input.relative.2  input.simple  intcode.py
2020/1/: Cargo.toml
2020/2/: Cargo.toml
2020/3/: Cargo.toml
2020/4/: Cargo.toml  input1
2020/4/src/: main.rs
2020/5/: Cargo.toml
2020/6/: Cargo.toml
2020/7/: Cargo.toml  ofile  output.dot
2022/rust/: Cargo.toml  day
(+114 files in other folders)
