[package]
name = "day4"
version = "0.1.0"
authors = ["Sean Perry <shalehperry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"